yuzu/gotosocial/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gotosocial
  labels:
    app.kubernetes.io/name: gotosocial
    app.kubernetes.io/part-of: gotosocial
    nokiy.net/cluster-secret-store: "production"
