yuzu/gotosocial/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotosocial
  namespace: gotosocial
  labels:
    app.kubernetes.io/name: gotosocial
    app.kubernetes.io/instance: gotosocial
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: gotosocial
      app.kubernetes.io/instance: gotosocial
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gotosocial
        app.kubernetes.io/instance: gotosocial
    spec:
      containers:
        - name: gotosocial
          image: superseriousbusiness/gotosocial:0.19.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /gotosocial/db
            - name: cache
              mountPath: /gotosocial/.cache
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 3
          resources: {}
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gotosocial-data
        - name: cache
          emptyDir: {}
