yuzu/gotosocial/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotosocial
  namespace: gotosocial
  labels:
    app.kubernetes.io/name: gotosocial
    app.kubernetes.io/instance: gotosocial
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: gotosocial
    app.kubernetes.io/instance: gotosocial
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
