yuzu/gotosocial/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gotosocial
  namespace: gotosocial
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: social.nokiy.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gotosocial
                port:
                  number: 80
  tls:
    - hosts:
        - social.nokiy.net
      secretName: gotosocial-tls
